@@ -7,24 +7,27 @@ DIST pl-6.6.6.tar.gz 14838653 SHA256 9f80bb274e2f31fd68b0acbe35982c012d5f8311dbe
 DIST pl-7.1.20.tar.gz 15804389 SHA256 03198c5c2658a665e203799da2834d6d3395c5272f2ed2d3ef4add7bd995ee9f SHA512 077669992f9d9eb06452a792a77c98889c6534c8a0dae5a8ee2a42890b362613190f6a1bb3bbc7539515a2068505312b6b2a7537e511b1f625fd6b4192c50f08 WHIRLPOOL 92c78254dbe35da0b1720eac5fb312bc7514bb78eddacb0a6a08abfb1ae1fbc7af59231646b448b7a7d704ca1f29365d8909dd17f8444e5b1fb261c65afa6f2b
 DIST pl-7.1.21.tar.gz 15809362 SHA256 900c7bd95e1dcef08675a2648810d6246324b010ae3541544d2c493b5c907fd2 SHA512 1a515c7ee7d09f122bf7ca3f3ff2c39da23c8e2706057ba5b733dc49695e216ac0946e30ce80190aa30c8036fc926a82bc7114c90dbdcd65a2d44354fd216c4b WHIRLPOOL 2aeefe1f03b69ea418c220bc39e163ac28f150dba9c3cb295b18a7838413c70885ae823bfdd6ada9b50697c0e25246a2ed88a52b56cafbddb08e1c4a370ecb2f
 DIST pl-7.1.22.tar.gz 15819302 SHA256 b918f76e8c223bcad3152ab818809311cb2bde443528fad4c956f737b904273b SHA512 bf9b625ad65f30602479433f98269d71df6798ecc6bdb88950b11cf92b753aade910c39817c757d458936ea6f2c59d65fadb651d1e3d811aac324c1c6fe1ab0e WHIRLPOOL 35c2c8d51fcd930805a328b9fbffad6cd72e6b5b2138021dbbf64d52ae7ba81c629de9a70f5cb8511dadc7d11bd06114b1949cc1c6db28004e054206a31de3d5
+DIST pl-7.1.23.tar.gz 15840454 SHA256 6be163eec0dcfc985b3527f4c3839e4e2ba414a420f28bdaa9e6a01719e5fb22 SHA512 3ab20840cf2bf4b98193e215f429a11e5987052863d146ea3e5a0e0fb4e736a51ea6beea19d7e2011acf5ed74cc439facafb05d8dac01705da05cc871e3a7694 WHIRLPOOL cd933e68def4cb77ffbae6220ddfac7e72c9ae9c2e89df9c88d99abef1c7b69e1d0ea0b1847727baeb5c084622a2036255e9222f5a6db05c18b54d7b8a4dcece
 DIST swi-prolog-6.6.4-gentoo-patchset-0.tar.gz 1596 SHA256 727a9ed67cdd8a23bc5d0bd5b2463353071370e58667a73c4ae403ef8a94671f SHA512 98d42047ec54155f7d34928bce3050edd65259b552ea82b763f15391f0283f5229a9a513e5f31c441294c5a7f2f2c4e6f133ff031eccfeaaf7c1037665240be9 WHIRLPOOL 3b4c0b6888e450176483bb5371c5f023864390852b9cf0d6f12b356a8460189e5e6cb85399b378c4b6bda314ce690e9a7ede1f79c74d78f033d7caff3a2fc408
 DIST swi-prolog-6.6.5-gentoo-patchset-0.tar.gz 1595 SHA256 baf043ea3a145d8600ecb9c16722e8578b818b3018d50345e951084a26b018e9 SHA512 62f7a73af4d34b8a13378fb65302b01d2445b3e4f7198e293c4fd9b50948feaf632bd5de0af10aaf2cab9d5fcc214fe04d86e6e969e60b23d9bae4a277214041 WHIRLPOOL 95c6449b2248a0277af1cad70ebc16b46fd6b15d540822f1f9e5370760de94171bcdbb98df9915ce85e2ddda55eaf457eacb26b29f3ed4f61b1f69388454b0a5
 DIST swi-prolog-6.6.6-gentoo-patchset-0.tar.gz 1590 SHA256 2b240d15562603120e0314bb69bde50089326c11876b7a62106c05f9d48ace71 SHA512 807c7e897dd5b9eef14e063ea53c03047f3acb23174a70a613258adf7f85dc1f7637158fde70aab2e0f40de4bc6ac5e3548dd09dbe3745d916a388f43eb832eb WHIRLPOOL 0a0dbc361cfbe343c8b3562a2c0535905eb1443eea0783b14f96bda43c04e8db6264f476c07da766c6936dc6088e34059f799a3244717390644bf0f5ae83018e
 DIST swi-prolog-7.1.20-gentoo-patchset-0.tar.gz 1640 SHA256 90dd1d785b6db80ec7743375e019e085b20254ce01defd3bde2fc9a8aa9d2007 SHA512 b57842ef389c9dd9eea79d0fd12b61f8ebf446e84db6a7ecd3422d6adbd7b63b0303644ee79dc92d4ea612126e5a42461c1e590271ce8789a830a03e040db928 WHIRLPOOL cc3a5c806caccdfea0d419afd4121f47518c82e0672c047321dea250d797efe81375a0ac0db1c78cb7a2a99f4803bcc5f1655f14cbe7b08e8a142ffa8e4ff839
 DIST swi-prolog-7.1.21-gentoo-patchset-0.tar.gz 1625 SHA256 ec8ec3e3e80a135b433a8b90a2d8d80bdb2537fb1c1bbb5f8b0b56fd65d5a5f0 SHA512 9d5dc9aa5baad8c0fd50dd120b7037aa1f5c15466fcc75acb16d5fc62f43f8367f8d982c78d10d56d6266d210d1eed55706b6563ce5e2400e4c052b10f9831ec WHIRLPOOL fb4d3e9a50609f65a7f4f20c35e2161858bdea75e047e8bad413a0413e46a6987b23d8ccb631bb9f84d2df246456e49c125bc2e55069503636e1b8df6e8a5ca0
 DIST swi-prolog-7.1.22-gentoo-patchset-0.tar.gz 1630 SHA256 5d3a07c2b27a6663ef8245ab425ecb60c0dd8188e05fb0f61321f97e32a9df24 SHA512 a85096171261b9193aabe3abb8627ab9ffa2b6309b50ea5de57e6d0f6baae13dc9f1285834d102b61f0f8f103db4a6ab6dd282a9f157b6da62fec681c2900088 WHIRLPOOL b5a2ca4f1db13497acf558645fc743464b35e7de97698b514dfec855d05f7c0b30aeaf305713b8bf51ca94208a236885adb62d6cd29b3b4474be273c946617d3
+DIST swi-prolog-7.1.23-gentoo-patchset-0.tar.gz 1623 SHA256 a8e66ca8e4ec4620c8ccc4cb6e56f3b0a326bdb1331bec74ed8e51d1a82efc48 SHA512 a25be0b448f1af870b2b7941fed1887eed4c36e67590021523ddad7fddeb3a3d98f61aedf05af86718eda27f5bf1944e9ca4ebfbca683e065f06a9df2edb2098 WHIRLPOOL 4af49b09ec1106bc8e13a91de3eb93cbba0ae0b2fbfb4874869d053ea906996758107a694158b73a18b301ac79e537c861d8b07be533631cdcf86fba2b049d3e
 EBUILD swi-prolog-6.6.4.ebuild 2902 SHA256 9df591c63932dec2b0685219c390b0c2c0b19f3bf5873b665e16514e9210d72e SHA512 272a217baf21156871f859242ae94c53846b1beaea152e1eaeb34d65f62f01cc99ce60b1c59c855645197954fa2593f8302eba702423c6f885500a54839bf9da WHIRLPOOL bb824ac614fa9ea2dce825eee441de4975c8e9f114db0e342fefe50ed3cde446dedd92ca7f532b5eccfe599778358242f5078d550c47c26f0aa48982f06b651b
 EBUILD swi-prolog-6.6.5.ebuild 2906 SHA256 fecefea51c16786882b7ee765adc29c858e85e0b94c94c95e3b5140f5092fd0e SHA512 2303eb774dd0cfee6e60490bfa4c3df59930ec6b7bca9b026d204241b7c9d2c9e51dcc42dbb3cc0967058e1b93c616e9190f177678249dfdd41106163f587915 WHIRLPOOL 362ba4675479f0ff0025a24418019eba29c8943bfdb152211637b3fc0ee53b91dd1bcf87c8ea1f8766b11289e813a3cd20b89c1eab602c8883df98bf0acd5d91
 EBUILD swi-prolog-6.6.6.ebuild 2906 SHA256 e7709334eaef476a8e06bfd3005440b22eef96017e698bfa34fb8c3868ad4718 SHA512 dc55b23f631efa5966954acfdee0b1d50666099c982640d1249caee6b2dd8c69a43603d3786f8e0b4d680a695029042c28c5e70062cdea0dcefbb6b90e557174 WHIRLPOOL abc73f513f16836fb17cada1789c92dc8c1cd3fea458df82a2280871c956e41ecb7ccc3440e73b82a5c29b09d1a87af510f0b7fbda2d26da9ed178d6a85dc2af
 EBUILD swi-prolog-7.1.20.ebuild 2906 SHA256 8e33112696673f70c8baad557ca077e72b83cf77468c43b2cb588fcb2a0cc07f SHA512 0affd26fcb1c8d3d3c9b61f045fd97ee8b0abf5cc6d713c2f16939b3c368130743bca1c1dcc13087e97b6eabbee18a804263839cbe5dd838b1266d3bdd95e681 WHIRLPOOL f10ee131c7ea203aaf419f3199b53c9a7531c45f4c54ba367d33605fbad5ef211ed7fb394d508a344075ef0d57caf6d00e282ffb6204d97507cfd5c18215a9bf
 EBUILD swi-prolog-7.1.21.ebuild 2906 SHA256 b3bbd750608d658e60c23f61a6c47d7402dc11748c7c09f7045374a31df862c6 SHA512 9e58bc70f44e0bebf1f43fbe11f00df5a5cf234502790ed1c2446ba3856621ced9be6e2a74a76afa05e0348ca47edfe7943ad4364e43ba600eed1979ce1b9794 WHIRLPOOL b08a6b5dd19d79a97eb812ff516bd4edca60109c7a89a34b70f98884727b847bc8cca0f0a3c227e16c149942e24f88513d1878eaf8991ea09864514e807321d6
 EBUILD swi-prolog-7.1.22.ebuild 2906 SHA256 283bc65c9c83191c8cb6380ff8c729bc3a8649c7550f171e400b6231477ba11a SHA512 7400fcc9b9e7d0f81bdcb5bf6fb2e3c9b607b029931c4127564d6c1cf2d0ea311c2909d3488406aed2f0a6a89f9e07fb0344dcd486f21509ae88e9b05169c188 WHIRLPOOL f780f49a9ccfa3ec16889e40fb05b376d8ec57f6ee13a6f9241e145c044812296d1527a431cac805f48c8fea91b2c5a9a5ee1cee9cfacd2bf009d06cae3bd96c
-MISC ChangeLog 66027 SHA256 796fc4f78fd5a4a852a85bca8900bdb46be507004f7e1a07634b44a753b070d7 SHA512 76f518fb3d382f55d52fb3145685aa1ea3e430ceb586726ba67dd2228500ce50644a777a2757030f7674b00c82961d2bd71aa3f2df5ec29349661a489bef65ed WHIRLPOOL a0a17efc8b8713a9dc8f42b4ecff26c53e7753a5cab520291afa365b38f6e096fcd6d951aa4ad6d2b4585afdd0777e0574ed9675971c173f7623a11694cc01fd
+EBUILD swi-prolog-7.1.23.ebuild 3086 SHA256 39ce3dbe909d625768307999f936c0646ef15dcf85abc2a768ed21b2ecb66081 SHA512 abd7f16c384acb51e260fb40cfc872d418e668b764b7816a9d081cfc34f73a499a6d1878127a7763bf41b19d8c3ae5be7ebf0f3df0230284eeca002d36957f00 WHIRLPOOL b32d3528ca79d3aa1fbffe8934f913520bf18bb3cddaab5d6b9264bf5f85120ddd4ad85f719d32389b6e9142a40303faac3ccfccbfcf35f7db2469afa799fc27
+MISC ChangeLog 66154 SHA256 d91e416f19d43022275ad3245adaa8ee61428fc0ec5bf8d8484cef5dacc4d586 SHA512 d0cd2aa8c98567432bb92bf98e644397d32392aabf986b0d6b68b5541c0acca3963a417db860faef8b0595a469568b1f102c80660f48fcfa796f52963db6ee1c WHIRLPOOL aec6134e423a0a9f11d6521f21bfafdb7fdf02275abbfb58a50d0f3109a36829daaf70de09acc281b582bb622613b3fcd5150f608e13249bc76747c2bb47e59b
 MISC metadata.xml 236 SHA256 cfc0f56c64161129f17e853433bcc92a212ae64ffe70f627ae6e24fd8cc3520a SHA512 c542f8fdc8c524ba187f02788407dd31a87a37255166c6ef184409e1469288736420df4dd39f42bf57bf367532ba9607484a6228790f5e71c1ca7bfb56525194 WHIRLPOOL 472c63b815161c5e04903d12cc2b5f8d7edf56ebdbd5407581534f728b95dc063cdcf227579f75c7ff819d29bb2ba02ee3b79480f46d60aa4de17199163e1242
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQaqgMACgkQrwS/tqE49e2MzQCaAgZWxP2YOqRLS8ze/H6StLps
-AmIAmgNsqdlOUFRWKSR+VkU0dVLbBbx1
-=LeB9
+iEYEAREIAAYFAlQkNd0ACgkQrwS/tqE49e2zdwCgsRdFVJuzIt+zjD4HUjG/hgf9
+kbwAoJ8gMDXzKbBFX5TZUjHyUr+PxkfS
+=ivMl
 -----END PGP SIGNATURE-----
