@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.451 2014/09/18 09:50:34 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.452 2014/09/25 15:37:51 keri Exp $
+
+*swi-prolog-7.1.23 (25 Sep 2014)
+
+  25 Sep 2014; <keri@gentoo.org> +swi-prolog-7.1.23.ebuild:
+  Bump -7.1 development version
 
 *swi-prolog-7.1.22 (18 Sep 2014)
 
